# research-agent

./: .dockerignore  .env.example  Dockerfile.api  Dockerfile.worker  README.md  Tiltfile  celerybeat-schedule  pyproject.toml
.github/workflows/: build.yaml
.ragdb/: meta.pkl  vectors.npy
.ragdb/news-demo/: manifest.json  meta.pkl  vectors.npy
apps/phase1_cli/: main.py
apps/phase2_rag_cli/: main.py
k8s/base/: api.yaml  celery-beat.yaml  celery-worker.yaml  configmap-env.yaml  cron-enqueue-feeds.yaml  deploy-api.yaml  deploy-worker.yaml  kustomization.yaml  newsrag-config.yaml  newsrag-secrets.yaml  redis.yaml  secret-env.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
tests/: test_fetcher.py
