[project]
name = "newsrag"
version = "0.2.0"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
  "requests",
  "readability-lxml",
  "beautifulsoup4",
  "openai>=1.0.0",
  "python-dotenv",
  "pytest",
  "faiss-cpu",
  "rank-bm25",
  "pydantic>=2.5",
  "langchain>=0.2.0",
  "celery>=5.3",
  "redis>=5.0",
  "newsrag-core",
  "newsrag-retrieval",
  "newsrag-api",
  "newsrag-tasks",
  "newsrag-cache",
  "newsrag-feeds",
]

[tool.uv]
package = false

[tool.uv.sources]
newsrag-core = { path = "packages/core" }
newsrag-retrieval  = { path = "packages/retrieval" }
newsrag-api = { path = "packages/api" }
newsrag-tasks = { path = "packages/tasks" }
newsrag-cache = { path = "packages/cache" }
newsrag-feeds = { path = "packages/feeds" }